[project]
name = "boggerrr-nodes"
description = "A node for comfyui to use seedream3.0 and seededit3.0 "
version = "1.0.1"

dependencies = ["requests", "pillow", "numpy"]

[project.urls]
Repository = "https://github.com/mamamia1110/comfyui-boggerrr-nodes"

[tool.comfy]
PublisherId = "mamamia1110"
DisplayName = "Boggerrr Nodes"
