[project]
name = "boggerrr-nodes"
description = "A node for comfyui to use seedream3.0 and seededit3.0 "
version = "1.0.2"

dependencies = ["requests", "pillow", "numpy", "dotenv"]

[project.urls]
Repository = "https://github.com/mamamia1110/comfyui-boggerrr-nodes"

[tool.comfy]
PublisherId = "boggerrr1110"
DisplayName = "Boggerrr Nodes"
